force-app/main/default/objects/PaymentOrBillingSettingDetail__c/PaymentOrBillingSettingDetail__c.object-meta.xml
<CustomObject>
    <label>支払/請求設定明細</label>
    <nameField>
        <displayFormat>PD-{000000000}</displayFormat>
        <label>支払/請求設定明細名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>