force-app/main/default/objects/PaymentOrBillingSettingDetail__c/fields/CostCategory__c.field-meta.xml
<CustomField>
    <fullName>CostCategory__c</fullName>
    <label>費用分類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>固定費</fullName>
            </value>
            <value>
                <fullName>季節変動費</fullName>
            </value>
            <value>
                <fullName>月次変動費</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>