force-app/main/default/objects/PaymentOrBillingSettingDetail__c/fields/EndingDay__c.field-meta.xml
<CustomField>
    <fullName>EndingDay__c</fullName>
    <inlineHelpText>テスト用</inlineHelpText>
    <label>終了日</label>
    <type>Date</type>
</CustomField>