force-app/main/default/objects/PaymentOrBillingSettingDetail__c/fields/ExcludingAmount__c.field-meta.xml
<CustomField>
    <fullName>ExcludingAmount__c</fullName>
    <label>税抜額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>