force-app/main/default/objects/PaymentOrBillingSettingDetail__c/fields/PaymentOrBillingSetting__c.field-meta.xml
<CustomField>
    <fullName>PaymentOrBillingSetting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>支払/請求設定</label>
    <referenceTo>PaymentOrBillingSetting__c</referenceTo>
    <relationshipLabel>支払/請求設定明細</relationshipLabel>
    <relationshipName>PaymentOrBillingSetting_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>