force-app/main/default/objects/PaymentOrBillingSettingDetail__c/fields/StartingDay__c.field-meta.xml
<CustomField>
    <fullName>StartingDay__c</fullName>
    <inlineHelpText>テスト用</inlineHelpText>
    <label>開始日</label>
    <type>Date</type>
</CustomField>