force-app/main/default/objects/PaymentOrBillingSettingDetail__c/listViews/BillingManagementTeam_PaymentOrBillingSettingDetail.listView-meta.xml
<ListView>
    <fullName>BillingManagementTeam_PaymentOrBillingSettingDetail</fullName>
    <filterScope>Queue</filterScope>
    <label>請求管理チーム</label>
    <queue>BillingManagementTeam</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>